fixed invisible form inputs

--- a/src/components/NewTarget/new-target.css
+++ b/src/components/NewTarget/new-target.css
@@ -13,7 +13,7 @@
 form {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
 }
 input {
   margin-bottom: 1rem;
